feat(): Bug Fix And implementation, bump V3.0.0